--- a/requirements.txt
+++ b/requirements.txt
@@ -13,14 +13,29 @@ cycler==0.10.0
 Django==3.0.5
 django-crispy-forms==1.9.0
 django-formset-bootstrap==1.4.0.dev3
+Flask==1.1.2
 gast==0.3.3
+google-auth==1.14.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.28.1
+gunicorn==20.0.4
 h5py==2.10.0
 idna==2.9
 itsdangerous==1.1.0
+Jinja2==2.11.2
 joblib==0.14.1
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
 kiwisolver==1.2.0
 Markdown==3.2.1
-MarkupSafe==1.1.
+MarkupSafe==1.1.1
+matplotlib==3.2.1
+more-itertools==8.3.0
+numpy==1.18.3
+oauthlib==3.1.0
+opencv-python==4.2.0.34
 opt-einsum==3.2.1
 packaging==20.4
 Pillow==7.1.2
@@ -37,9 +52,17 @@ PyYAML==5.3.1
 requests==2.23.0
 requests-oauthlib==1.3.0
 rsa==4.0
+scikit-learn==0.22.2.post1
+scipy==1.4.1
 six==1.14.0
+sklearn==0.0
 sqlparse==0.3.1
+tensorboard==2.2.1
+tensorboard-plugin-wit==1.6.0.post3
+tensorflow==2.2.0rc4
+tensorflow-estimator==2.2.0
 termcolor==1.1.0
 urllib3==1.25.9
 wcwidth==0.1.9
+Werkzeug==1.0.1
 wrapt==1.12.1
